tests/fixtures/invalid/float-underscore-before-point.stderr
TOML parse error at line 1, column 9
  |
1 | bad = 1_.2
  |         ^
Unexpected `.`
Expected digit
While parsing an Integer
